--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "introspect": "npx prisma introspect"
   },
   "dependencies": {
+    "@prisma/client": "^2.19.0",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1"
@@ -16,6 +18,7 @@
     "@types/node": "^14.14.35",
     "@types/react": "^17.0.3",
     "prettier": "2.2.1",
+    "prisma": "^2.19.0",
     "typescript": "^4.2.3"
   }
 }
