--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "introspect": "npx prisma introspect"
+    "prisma:introspect": "npx prisma introspect",
+    "prisma:generate": "npx prisma generate"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.6",
+    "@chakra-ui/react": "^1.3.4",
+    "@emotion/react": "^11.1.5",
+    "@emotion/styled": "^11.1.5",
     "@prisma/client": "^2.19.0",
+    "framer-motion": "^3.10.5",
     "next": "10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1"
