--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "compilerOptions": {
+    "baseUrl": "./",
+    "paths": {
+      "@/components/*":["./components/*"],
+      "@/pages/*":["./pages/*"],
+      "@/utils/*":["./utils/*"],
+    },
     "target": "es5",
     "lib": [
       "dom",
