--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "@prisma/client": "^2.19.0",
-    "framer-motion": "^3.10.5",
+    "framer-motion": "3.6.7",
     "next": "10.0.9",
     "next-auth": "^3.13.1",
     "ngrok": "^3.4.1",
