--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "10.0.9",
     "next-auth": "^3.13.1",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "@types/next-auth": "^3.7.2",
