--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "framer-motion": "3.6.7",
     "next": "10.0.9",
     "next-auth": "^3.13.1",
+    "nprogress": "^0.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "swr": "^0.5.4"
   },
   "devDependencies": {
     "@types/next-auth": "^3.7.2",
