Implemented loutls endpoint

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "@emotion/styled": "^11.1.5",
     "@prisma/client": "^2.19.0",
     "framer-motion": "3.6.7",
+    "moment": "^2.29.1",
     "next": "10.0.9",
+    "next-absolute-url": "^1.2.2",
     "next-auth": "^3.13.1",
     "nprogress": "^0.2.0",
     "react": "17.0.1",
