--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "build:prod": "npx prisma migrate prod && next build",
+    "build:prod": "npx prisma migrate deploy && next build",
     "start": "next start"
   },
   "dependencies": {
